tests/NormalTests/paczka2/big_fuzzy/24347349.err
Error in line 5: fyZo A3"4 ",4
Error in line 2: 30bs3S A871 0,5
Error in line 7: 30bs3S A354 90,9
Error in line 15: 30bs3S A282 91,7
Error in line 13: Eq7c4Cu5laB A282 54,9
Error in line 22: fyZo A354 114,6
Error in line 26: fyZo A282 50,1
Error in line 43: fyZo A282 26,8
Error in line 37: m9Dl A871 2,1
Error in line 53: m9Dl A282 12,3
Error in line 70: olhFI20n A827 421,7
Error in line 78: arASxGegu A354 64,3
Error in line 82: m9Dl A354 12,9
Error in line 93: arASxGegu A282 105,2
Error in line 64: fyZo A827 37,6
Error in line 94: arASxGegu A827 78,3
Error in line 98: fyZo A354 11,73
Error in line 95: fyZo A354 5,2
Error in line 90: A871 A354 93,6
Error in line 107: arASxGegu A282 81,7
Error in line 111: fyZo A282 36,4
Error in line 109: olhFI20n A871 147,9
Error in line 110: arASxGegu A871 25,2
Error in line 125: A871 A354 23,5
Error in line 130: m9Dl A871 365,1
Error in line 141: m9Dl A354 17,9
Error in line 144: Eq7c4Cu5laB A827 53,0
Error in line 147: fyZo A354 14,8
Error in line 149: Eq7c4Cu5laB A282 42,7
Error in line 134: 30bs3S A871 372,0
Error in line 154: olhFI20n A354 75,4
Error in line 157: 30bs3S A282 20,2
Error in line 151: arASxGegu A282 13,8
Error in line 163: arASxGegu A282 43,41
Error in line 162: arASxGegu A871 29,0
Error in line 166: arASxGegu A282 162,1
Error in line 175: 30bs3S A354 75,49
Error in line 177: olhFI20n A282 56,8
Error in line 186: 30bs3S A282 58,28
Error in line 180: olhFI20n A871 73,8
Error in line 198: Eq7c4Cu5laB A827 28,7
Error in line 195: fyZo A871 82,5
Error in line 204: fyZo A827 12,6
Error in line 196: 30bs3S A282 51,7
Error in line 213: 30bs3S A827 41,1
Error in line 216: m9Dl A871 -1,6
Error in line 210: fyZo A354 66,4
Error in line 215: 30bs3S A871 25,5
Error in line 214: m9Dl A871 13,8
Error in line 244: olhFI20n A871 75,0
